Inclusão dos scripts SQL.